--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "test:cov": "vitest run --coverage",
         "lint": "biome lint --write",
         "format": "biome format --write",
-        "prepare": "bun run build"
+        "prepare": "bun run build && husky"
     },
     "keywords": [],
     "author": "",
@@ -36,8 +36,11 @@
     "type": "commonjs",
     "devDependencies": {
         "@biomejs/biome": "^2.3.8",
+        "@commitlint/cli": "^20.2.0",
+        "@commitlint/config-conventional": "^20.2.0",
         "@types/bun": "^1.3.4",
         "@vitest/coverage-istanbul": "4.0.15",
+        "husky": "^9.1.7",
         "tsup": "^8.5.1",
         "typescript": "^5.9.3",
         "vitest": "^4.0.15"
