--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
     "name": "policy-based-authorization-system",
-    "version": "1.0.0",
-    "description": "",
+    "version": "0.1.0",
+    "description": "A policy-based authorization system for Node.js and NestJS applications",
     "main": "./dist/index.js",
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
+    "publishConfig": {
+        "registry": "https://npm.pkg.github.com"
+    },
     "exports": {
         ".": {
             "types": "./dist/index.d.ts",
@@ -28,7 +31,8 @@
         "test:cov": "vitest run --coverage",
         "lint": "biome lint --write",
         "format": "biome format --write",
-        "prepare": "bun run build && husky"
+        "prepare": "bun run build && husky",
+        "release": "release-it"
     },
     "keywords": [],
     "author": "",
@@ -41,6 +45,7 @@
         "@types/bun": "^1.3.4",
         "@vitest/coverage-istanbul": "4.0.15",
         "husky": "^9.1.7",
+        "release-it": "^19.1.0",
         "tsup": "^8.5.1",
         "typescript": "^5.9.3",
         "vitest": "^4.0.15"
