fix: package and test coverage fixing

--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-    "name": "policy-based-authorization-system",
+    "name": "@gsomenzi/policy-based-authorization-system",
     "version": "0.1.0",
     "description": "A policy-based authorization system for Node.js and NestJS applications",
     "main": "./dist/index.js",
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/gsomenzi/policy-based-authorization-system.git"
+    },
     "publishConfig": {
         "registry": "https://npm.pkg.github.com"
     },
@@ -43,7 +47,7 @@
         "@commitlint/cli": "^20.2.0",
         "@commitlint/config-conventional": "^20.2.0",
         "@types/bun": "^1.3.4",
-        "@vitest/coverage-istanbul": "4.0.15",
+        "@vitest/coverage-v8": "^4.0.15",
         "husky": "^9.1.7",
         "release-it": "^19.1.0",
         "tsup": "^8.5.1",
