--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "test:cov": "vitest run --coverage",
         "lint": "biome lint --write",
         "format": "biome format --write",
-        "prepare": "bun run build && husky",
+        "prepare": "husky",
         "release": "release-it"
     },
     "keywords": [],
@@ -47,6 +47,7 @@
         "@commitlint/cli": "^20.2.0",
         "@commitlint/config-conventional": "^20.2.0",
         "@types/bun": "^1.3.4",
+        "@types/express": "^5.0.6",
         "@vitest/coverage-v8": "^4.0.15",
         "husky": "^9.1.7",
         "release-it": "^19.1.0",
@@ -56,6 +57,7 @@
     },
     "peerDependencies": {
         "@nestjs/common": "^11.1.9",
+        "@nestjs/core": "^11.1.9",
         "reflect-metadata": "^0.2.2"
     }
 }
