--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "scripts": {
         "build": "tsup",
         "build:watch": "tsup --watch",
-        "test": "vitest",
+        "test": "vitest run",
         "test:watch": "vitest --watch",
         "test:cov": "vitest run --coverage",
         "lint": "biome lint --write",
